# polymarket-trading-platform

./: HOW_TO_RUN.md  Polymarket_US_Complete_Documentation.md  README.md  polymarket_trading_tool_plan.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: agent.py  analytics.py  backtest.py  markets.py  trading.py
backend/app/core/: config.py  database.py
backend/app/models/: market.py
backend/app/services/: ai_agent.py  arbitrage_engine.py  backtest_engine.py  data_pipeline.py  falcon_client.py  fee_calculator.py  kalshi_client.py  margin_calculator.py  monitoring.py  polymarket_client.py  polymarket_intl_client.py  risk_manager.py
backend/app/websocket/: manager.py
frontend/: next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/arbitrage/: page.tsx
frontend/app/backtest/: page.tsx
frontend/app/learn/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/app/sentiment/: page.tsx
frontend/app/trading/: page.tsx  trading.module.css
